<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.LoginActivity">


    <ImageView
        android:id="@+id/logo_flixnet"
        android:layout_width="265dp"
        android:layout_height="115dp"
        android:layout_marginTop="45dp"
        android:src="@drawable/flixnet_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_usuario"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/login_label_usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_flixnet"/>

    <EditText
        android:id="@+id/input_contrasena"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/login_label_contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_usuario" />

    <Button
        android:id="@+id/boton_login"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/boton_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_contrasena"/>

    <Button
        android:id="@+id/boton_register"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/boton_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boton_login"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boton_register"
        />

</android.support.constraint.ConstraintLayout>